--- a/user-service/Makefile
+++ b/user-service/Makefile
@@ -6,7 +6,7 @@ build:
 run:
 #	docker run -p 50053:50051 -e MICRO_SERVER_ADDRESS=:50051 -e MICRO_REGISTRY=mdns -e       DB_NAME: "postgres" -e DB_HOST: "database" -e DB_PORT: "5432" -e DB_USER: "postgres" -e DB_PASSWORD: "postgres"  user-service
 
-	docker run --net="host" -p 5054 \
+	docker run --rm --net="host" -p 5054 \
                     -e MICRO_REGISTRY=mdns  \
                     -e DB_NAME="postgres"  \
                     -e DB_HOST="127.0.0.1"  \
