--- a/vessel-service/Makefile
+++ b/vessel-service/Makefile
@@ -5,4 +5,6 @@ build:
 	docker build -t vessel-service .
 
 run:
-	docker run --rm -p 50052:50051 -e MICRO_SERVER_ADDRESS=:50051 -e MICRO_REGISTRY=mdns --name vessel vessel-service
+	docker run --rm -p 50052:50051 -e MICRO_SERVER_ADDRESS=:50051 -e MICRO_REGISTRY=mdns \
+	--link mongod:mongod \ 
+	--name vessel vessel-service
