--- a/vessel-service/Makefile
+++ b/vessel-service/Makefile
@@ -7,4 +7,5 @@ build:
 run:
 	docker run --rm -p 50052:50051 -e MICRO_SERVER_ADDRESS=:50051 -e MICRO_REGISTRY=mdns \
 	--link mongod:mongod \ 
-	--name vessel vessel-service
+	--name vessel \
+	vessel-service env
